# voice

./: .dockerignore  Dockerfile  README.md  entrypoint.sh  index.html  pyproject.toml  transcription_proxy.py
.github/workflows/: build.yml
k8s/: deployment.yaml
transcription-proxy/: Dockerfile  transcription_proxy.py
